--- a/block.html
+++ b/block.html
@@ -14,15 +14,19 @@
 
     <script>
       let canvas = document.getElementById("myCanvas");
-      let ctx = canvas.getContext("2d")
+      let ctx = canvas.getContext("2d");
+      let ballRadius = 10;
       let x = canvas.width/2;
       let y = canvas.height-30;
       let dx = 2;
       let dy = -2;
+      let paddleHeight = 10;
+      let paddleWidth = 75;
+      let paddleLex = (canvas.width-paddleWidth)/2;
 
       function drawBall() {
         ctx.beginPath();
-        ctx.arc(x, y, 10, 0, Math.PI*2);
+        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
         ctx.fillStyle = "#0095DD";
         ctx.fill();
         ctx.closePath();
@@ -31,6 +35,14 @@
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawBall();
+
+        if(x + dx > canvas.width || x + dx < ballRadius) {
+          dx = -dx;
+        }
+        if(y + dy > canvas.height || y + dy < ballRadius) {
+          dy = -dy;
+        }
+
         x += dx;
         y += dy;
       }
