--- a/block.html
+++ b/block.html
@@ -22,7 +22,30 @@
       let dy = -2;
       let paddleHeight = 10;
       let paddleWidth = 75;
-      let paddleLex = (canvas.width-paddleWidth)/2;
+      let paddleX = (canvas.width-paddleWidth)/2;
+      let rightPressed = false;
+      let leftPressed = false;
+
+      document.addEventListener("keydown", keyDownHandler, false);
+      document.addEventListener("keyup", keyUpHandler, false);
+
+      function keyDownHandler(e) {
+        if(e.key == "Right" || e.key == "ArrowRight") {
+          rightPressed = true;
+        }
+        else if(e.key == "Left" || e.key == "ArrowLeft") {
+          leftPressed = true;
+        }
+      }
+
+      function keyUpHandler(e) {
+        if(e.key == "Right" || e.key == "ArrowRight") {
+          rightPressed = false;
+        }
+        else if(e.key == "Left" || e.key == "ArrowLeft") {
+          leftPressed = false;
+        }
+      }
 
       function drawBall() {
         ctx.beginPath();
@@ -32,15 +55,31 @@
         ctx.closePath();
       }
 
+      function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+      }
+
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawBall();
+        drawPaddle();
 
-        if(x + dx > canvas.width || x + dx < ballRadius) {
+        if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
           dx = -dx;
         }
-        if(y + dy > canvas.height || y + dy < ballRadius) {
+        if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
           dy = -dy;
+        }
+
+        if(rightPressed && paddleX < canvas.width-paddleWidth) {
+          paddleX += 7;
+        }
+        else if(leftPressed && paddleX > 0) {
+          paddleX -= 7;
         }
 
         x += dx;
