--- a/block.html
+++ b/block.html
@@ -71,8 +71,18 @@
         if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
           dx = -dx;
         }
-        if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
+        if(y + dy < ballRadius) {
           dy = -dy;
+        }
+        else if(y + dy > canvas.height-ballRadius) {
+          if(x > paddleX && x < paddleX + paddleWidth) {
+            dy = -dy;
+          }
+          else {
+            alert("GAME OVER");
+            document.location.reload();
+            clearInterval(interval); // Needed for Chrome to end game
+          }
         }
 
         if(rightPressed && paddleX < canvas.width-paddleWidth) {
@@ -86,7 +96,7 @@
         y += dy;
       }
 
-      setInterval(draw, 10);
+      let interval = setInterval(draw, 10);
     </script>
   </body>
 </html>
