--- a/block.html
+++ b/block.html
@@ -37,7 +37,7 @@
       for(let c = 0; c < brickColumnCount; c++) {
         bricks[c] = [];
         for(let r = 0; r < brickRowCount; r++) {
-          bricks[c][r] = { x: 0, y: 0 };
+          bricks[c][r] = { x: 0, y: 0, status: 1 };
         }
       }
 
@@ -62,6 +62,20 @@
         }
       }
 
+      function collisionDetection() {
+        for(let c = 0; c < brickColumnCount; c++) {
+          for(let r = 0; r < brickRowCount; r++) {
+            let b = bricks[c][r];
+            if(b.status == 1) {
+              if(x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight) {
+                dy = -dy;
+                b.status = 0;
+              }
+            }
+          }
+        }
+      }
+
       function drawBall() {
         ctx.beginPath();
         ctx.arc(x, y, ballRadius, 0, Math.PI*2);
@@ -81,15 +95,17 @@
       function drawBricks() {
         for(let c = 0; c < brickColumnCount; c++) {
           for(let r = 0; r < brickRowCount; r++) {
-            let brickX = (c *(brickWidth + brickPadding))+ brickOffsetLeft;
-            let brickY = (r *(brickHeight + brickPadding))+ brickOffsetTop;
-            bricks[c][r].x = brickX;
-            bricks[c][r].y = brickY;
-            ctx.beginPath();
-            ctx.rect(brickX, brickY, brickWidth, brickHeight);
-            ctx.fillStyle = "#0095DD";
-            ctx.fill();
-            ctx.closePath();
+            if(bricks[c][r].status == 1) {
+              let brickX = (c *(brickWidth + brickPadding))+ brickOffsetLeft;
+              let brickY = (r *(brickHeight + brickPadding))+ brickOffsetTop;
+              bricks[c][r].x = brickX;
+              bricks[c][r].y = brickY;
+              ctx.beginPath();
+              ctx.rect(brickX, brickY, brickWidth, brickHeight);
+              ctx.fillStyle = "#0095DD";
+              ctx.fill();
+              ctx.closePath();
+            }
           }
         }
       }
@@ -99,6 +115,7 @@
         drawBricks();
         drawBall();
         drawPaddle();
+        collisionDetection();
 
         if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
           dx = -dx;
@@ -108,7 +125,9 @@
         }
         else if(y + dy > canvas.height-ballRadius) {
           if(x > paddleX && x < paddleX + paddleWidth) {
-            dy = -dy;
+            if(y = y - paddleHeight) {
+              dy = -dy;
+            }
           }
           else {
             alert("GAME OVER");
