ライフ追加

--- a/block.html
+++ b/block.html
@@ -32,6 +32,8 @@
       let brickPadding = 10;
       let brickOffsetTop = 30;
       let brickOffsetLeft = 30;
+      let score = 0;
+      let lives = 3;
 
       let bricks = [];
       for(let c = 0; c < brickColumnCount; c++) {
@@ -43,6 +45,7 @@
 
       document.addEventListener("keydown", keyDownHandler, false);
       document.addEventListener("keyup", keyUpHandler, false);
+      document.addEventListener("mousemove", mouseMoveHandler, false);
 
       function keyDownHandler(e) {
         if(e.key == "Right" || e.key == "ArrowRight") {
@@ -62,6 +65,13 @@
         }
       }
 
+      function mouseMoveHandler(e) {
+        let relativeX = e.clientX - canvas.offsetLeft;
+        if(relativeX > 0 && relativeX < canvas.width) {
+          paddleX = relativeX - paddleWidth/2;
+        }
+      }
+
       function collisionDetection() {
         for(let c = 0; c < brickColumnCount; c++) {
           for(let r = 0; r < brickRowCount; r++) {
@@ -70,6 +80,11 @@
               if(x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight) {
                 dy = -dy;
                 b.status = 0;
+                score++;
+                if(score == brickRowCount * brickColumnCount) {
+                  alert("YOU WIN, CONGRATULATIONS!");
+                  document.location.reload();
+                }
               }
             }
           }
@@ -110,11 +125,25 @@
         }
       }
 
+      function drawScore() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Score:" + score, 8, 20);
+      }
+
+      function drawLives() {
+        ctx.font = "16px Arial";
+        ctx.fillStyle = "#0095DD";
+        ctx.fillText("Lives:" + lives, canvas.width-65, 20);
+      }
+
       function draw() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
         drawBricks();
         drawBall();
         drawPaddle();
+        drawScore();
+        drawLives();
         collisionDetection();
 
         if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
@@ -125,14 +154,21 @@
         }
         else if(y + dy > canvas.height-ballRadius) {
           if(x > paddleX && x < paddleX + paddleWidth) {
-            if(y = y - paddleHeight) {
               dy = -dy;
             }
-          }
           else {
-            alert("GAME OVER");
-            document.location.reload();
-            clearInterval(interval); // Needed for Chrome to end game
+            lives--;
+            if(!lives) {
+              alert("GAME OVER");
+              document.location.reload();
+            }
+            else {
+              x = canvas.width/2;
+              y = canvas.height-30;
+              dx = 3;
+              dy = -3;
+              paddleX = (canvas.width-paddleWidth)/2;
+            }
           }
         }
 
@@ -145,9 +181,10 @@
 
         x += dx;
         y += dy;
+        requestAnimationFrame(draw);
       }
-
-      let interval = setInterval(draw, 10);
-    </script>
+      
+      draw();
+      </script>
   </body>
 </html>
